Added some logic and tests for the workspace submission process, more specifically for the submission of newly added nodes.